# RXMesh-Python-Bindings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
rxmesh_binding/: CMakeLists.txt  debug.cu  setup.py
rxmesh_binding/csrc/: bindings.cpp  geometry.cu  kernels.h  rxmesh_bridge.cuh  rxmesh_wrapper.cu  rxmesh_wrapper.h  topology.cu
rxmesh_binding/python/: test.py
